WanaLyzer/out/numpy/typing/tests/data/fail/testing.pyi
import numpy as np
import numpy.typing as npt

AR_U: npt.NDArray[np.str_]

def func() -> bool: ...
